--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "^12.4.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
+    "vite-plugin-eslint": "^1.5.2",
     "vue-tsc": "^0.34.7"
   },
   "lint-staged": {
